# zephyr-xiao-ble

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  Kconfig  prj.conf  west.yml
app/boards/: xiao_ble.overlay
app/dts/bindings/: gpio-test.yaml
app/src/: main.c
